Added .gitignore and maps api key

--- a/notebooks/neighorhood_data.ipynb
+++ b/notebooks/neighorhood_data.ipynb
@@ -2,18 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 31,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AIzaSyDR98CJ-Ha_EM1saf39F0ca8kNIp_nDlYM\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "import requests\n",
     "import json\n",
     "\n",
     "# for more info, visit\n",
     "# https://developers.google.com/maps/documentation/geocoding/get-api-key#get-an-api-key\n",
-    "MAPS_URL = \"https://maps.googleapis.com/maps/api/geocode/json?latlng={lat},{long}&key={api_key}\""
+    "MAPS_URL = \"https://maps.googleapis.com/maps/api/geocode/json?latlng={lat},{long}&key={api_key}\"\n",
+    "with open(\"../keys/google_maps_api_key.txt\") as api_key_file:\n",
+    "    API_KEY = api_key_file.readlines()[0]"
    ]
   },
   {
@@ -52,21 +63,40 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://maps.googleapis.com/maps/api/geocode/json?latlng=37.748813,-122.421569&key={api_key}\n"
+     ]
+    }
+   ],
+   "source": [
+    "for business_id in restaurant_data:\n",
+    "    business_data = restaurant_data[business_id][\"business_data\"]\n",
+    "    latitude = business_data[\"latitude\"]\n",
+    "    longitude = business_data[\"longitude\"]\n",
+    "    \n",
+    "    url = MAPS_URL.replace(\"{lat}\", str(latitude))\n",
+    "    url = url.replace(\"{long}\", str(longitude))\n",
+    "    print url\n",
+    "    \n",
+    "    break"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "for business_id in restaurant_data:\n",
-    "    business_data = restaurant_data[business_id]\n",
-    "    latitude = business_data[\"latitude\"]\n",
-    "    longitude = business_data[\"longitude\"]\n",
-    "    \n",
-    "    url = MAP_URL\n",
-    "    \n",
-    "    break"
-   ]
+   "source": []
   }
  ],
  "metadata": {
