--- a/notebooks/restaurant_data.ipynb
+++ b/notebooks/restaurant_data.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 265,
    "metadata": {
     "collapsed": false
    },
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 266,
    "metadata": {
     "collapsed": false
    },
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 267,
    "metadata": {
     "collapsed": false
    },
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 268,
    "metadata": {
     "collapsed": false
    },
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 269,
    "metadata": {
     "collapsed": false
    },
@@ -145,21 +145,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Data PRE-filter length:  4669\n",
+      "Data PRE-filter length:  7622\n",
       "Data POST-filter length:  4669\n"
      ]
     }
    ],
    "source": [
     "# remove business that are missing longitude or latitude data\n",
-    "print \"Data PRE-filter length: \", len(all_data.keys())\n",
-    "all_data = {k:v for k,v in all_data.iteritems() if (\"latitude\" in v[\"business_data\"]) and (v[\"business_data\"][\"latitude\"]) and (\"longitude\" in v[\"business_data\"]) and (v[\"business_data\"][\"longitude\"])}\n",
-    "print \"Data POST-filter length: \", len(all_data.keys())"
+    "print \"Data PRE-filter length: \", len(all_restaurant_data.keys())\n",
+    "all_restaurant_data = {k:v for k,v in all_restaurant_data.iteritems() if (\"latitude\" in v[\"business_data\"]) and (v[\"business_data\"][\"latitude\"]) and (\"longitude\" in v[\"business_data\"]) and (v[\"business_data\"][\"longitude\"])}\n",
+    "print \"Data POST-filter length: \", len(all_restaurant_data.keys())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": 270,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": 271,
    "metadata": {
     "collapsed": false
    },
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 272,
    "metadata": {
     "collapsed": false
    },
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 273,
    "metadata": {
     "collapsed": false
    },
