Chloropleth basics are done

--- a/notebooks/neighorhood_data.ipynb
+++ b/notebooks/neighorhood_data.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 202,
    "metadata": {
     "collapsed": false
    },
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 203,
    "metadata": {
     "collapsed": false
    },
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 204,
    "metadata": {
     "collapsed": false
    },
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 205,
    "metadata": {
     "collapsed": false
    },
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 206,
    "metadata": {
     "collapsed": false
    },
@@ -119,18 +119,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 209,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "# RUN ON 4/15\n",
+    "# RUN ON 4/16\n",
     "\n",
-    "# save neighborhoods to a file\n",
-    "# f = open(\"../data/neighborhood/neighborhoods_2498_4998.txt\", 'a')\n",
+    "# # save neighborhoods to a file\n",
+    "# f = open(\"../data/neighborhood/neighborhoods_4900_7400.txt\", 'a')\n",
     "# count = 0\n",
-    "# for business_id in restaurant_data.keys()[2498:4998]:\n",
+    "# for business_id in restaurant_data.keys()[4900:7400]:\n",
     "#     business_data = restaurant_data[business_id][\"business_data\"]\n",
     "    \n",
     "#     if \"latitude\" in business_data.keys() and \"longitude\" in business_data.keys():\n",
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 208,
    "metadata": {
     "collapsed": false
    },
