--- a/notebooks/restaurant_data.ipynb
+++ b/notebooks/restaurant_data.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 296,
    "metadata": {
     "collapsed": false
    },
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": 297,
    "metadata": {
     "collapsed": false
    },
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 298,
    "metadata": {
     "collapsed": false
    },
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 299,
    "metadata": {
     "collapsed": false
    },
@@ -130,13 +130,13 @@
     "                 \"Inner Sunset\",\"Parnassus Heights\",\"Forest Knolls\",\"Buena Vista\",\"Corona Heights\",\"Ashbury Heights\",\n",
     "                 \"Eureka Valley\",\"St. Francis Wood\",\"Sherwood Forest\"]\n",
     "\n",
-    "for business_id in all_data:\n",
-    "    all_data[business_id][\"business_data\"][\"neighborhood\"] = random.choice(neighborhoods)"
+    "for business_id in all_restaurant_data:\n",
+    "    all_restaurant_data[business_id][\"business_data\"][\"neighborhood\"] = random.choice(neighborhoods)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 269,
+   "execution_count": 300,
    "metadata": {
     "collapsed": false
    },
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 270,
+   "execution_count": 301,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 271,
+   "execution_count": 302,
    "metadata": {
     "collapsed": false
    },
@@ -200,9 +200,9 @@
     "def calculate_avg_inspection_score(neighborhood):\n",
     "    total_score = 0.0\n",
     "    num_scores_added = 0\n",
-    "    for business_id in all_data:\n",
-    "        if all_data[business_id][\"business_data\"][\"neighborhood\"] == neighborhood:\n",
-    "            inspection_data = filter(lambda elt: elt[\"Score\"] != None, all_data[business_id][\"inspection_data\"])\n",
+    "    for business_id in all_restaurant_data:\n",
+    "        if all_restaurant_data[business_id][\"business_data\"][\"neighborhood\"] == neighborhood:\n",
+    "            inspection_data = filter(lambda elt: elt[\"Score\"] != None, all_restaurant_data[business_id][\"inspection_data\"])\n",
     "            if len(inspection_data) > 0:\n",
     "                inspection_data.sort(key=lambda x: x[\"Score\"])\n",
     "                total_score += inspection_data[0][\"Score\"]\n",
@@ -214,9 +214,9 @@
     "def calculate_avg_violation_score(neighborhood):\n",
     "    total_score = 0.0\n",
     "    num_scores_added = 0\n",
-    "    for business_id in all_data:\n",
-    "        if all_data[business_id][\"business_data\"][\"neighborhood\"] == neighborhood:\n",
-    "            violation_data = all_data[business_id][\"violation_data\"]\n",
+    "    for business_id in all_restaurant_data:\n",
+    "        if all_restaurant_data[business_id][\"business_data\"][\"neighborhood\"] == neighborhood:\n",
+    "            violation_data = all_restaurant_data[business_id][\"violation_data\"]\n",
     "            total_score += len(violation_data)\n",
     "            num_scores_added += 1\n",
     "    return total_score / num_scores_added"
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 272,
+   "execution_count": 303,
    "metadata": {
     "collapsed": false
    },
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 273,
+   "execution_count": 304,
    "metadata": {
     "collapsed": false
    },
@@ -249,6 +249,15 @@
     "with open(OUTPUT_PATH + \"chloropleth_data.json\", \"w\") as outfile:\n",
     "    json.dump(chloropleth_data, outfile)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
