Added new data foro neighborhoods

--- a/notebooks/neighorhood_data.ipynb
+++ b/notebooks/neighorhood_data.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -119,43 +119,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Completed first 2498 businesses"
+     ]
+    }
+   ],
    "source": [
     "# RUN ON 4/16\n",
     "\n",
-    "# # save neighborhoods to a file\n",
-    "# f = open(\"../data/neighborhood/neighborhoods_4900_7400.txt\", 'a')\n",
-    "# count = 0\n",
-    "# for business_id in restaurant_data.keys()[4900:7400]:\n",
-    "#     business_data = restaurant_data[business_id][\"business_data\"]\n",
+    "# save neighborhoods to a file\n",
+    "f = open(\"../data/neighborhood/neighborhoods_v2_0_2500.txt\", 'a')\n",
+    "count = 0\n",
+    "for business_id in restaurant_data.keys()[2:2500]:\n",
+    "    business_data = restaurant_data[business_id][\"business_data\"]\n",
     "    \n",
-    "#     if \"latitude\" in business_data.keys() and \"longitude\" in business_data.keys():\n",
-    "#         latitude = business_data[\"latitude\"]\n",
-    "#         longitude = business_data[\"longitude\"]\n",
+    "    if \"latitude\" in business_data.keys() and \"longitude\" in business_data.keys():\n",
+    "        latitude = business_data[\"latitude\"]\n",
+    "        longitude = business_data[\"longitude\"]\n",
     "\n",
-    "#         url = MAPS_LAT_LONG_URL.replace(\"{lat}\", str(latitude))\n",
-    "#         url = url.replace(\"{long}\", str(longitude))\n",
-    "#         url = url.replace(\"{api_key}\", API_KEY)\n",
+    "        url = MAPS_LAT_LONG_URL.replace(\"{lat}\", str(latitude))\n",
+    "        url = url.replace(\"{long}\", str(longitude))\n",
+    "        url = url.replace(\"{api_key}\", API_KEY)\n",
     "\n",
-    "#         neighborhood = send_map_request(business_id, url)\n",
-    "#         if neighborhood != None:\n",
-    "#             f.write(business_id + \": \" + neighborhood + \"\\n\")\n",
-    "#         else:\n",
-    "#             f.write(business_id + \": N/A\\n\")\n",
+    "        neighborhood = send_map_request(business_id, url)\n",
+    "        if neighborhood != None:\n",
+    "            f.write(business_id + \": \" + neighborhood + \"\\n\")\n",
+    "        else:\n",
+    "            f.write(business_id + \": N/A\\n\")\n",
     "            \n",
-    "#     # log\n",
-    "#     count += 1\n",
-    "#     sys.stdout.write(\"\\rCompleted first %d businesses\" % count)\n",
-    "# f.close()"
+    "    # log\n",
+    "    count += 1\n",
+    "    sys.stdout.write(\"\\rCompleted first %d businesses\" % count)\n",
+    "f.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -164,6 +172,28 @@
     "# restaurant_data['5988']\n",
     "# for i in xrange(10):\n",
     "#     sys.stdout.write(\"\\r%d\" % (i))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4669"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(restaurant_data.keys())\n"
    ]
   },
   {
