Added rest of the neighborhood data from google

--- a/notebooks/neighorhood_data.ipynb
+++ b/notebooks/neighorhood_data.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -119,38 +119,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Completed first 2169 businesses"
+     ]
+    }
+   ],
    "source": [
     "# RUN ON 4/17\n",
     "\n",
-    "# # save neighborhoods to a file\n",
-    "# f = open(\"../data/neighborhood/neighborhoods_v2_0_2500.txt\", 'a')\n",
-    "# count = 0\n",
-    "# for business_id in restaurant_data.keys()[2500:]:\n",
-    "#     business_data = restaurant_data[business_id][\"business_data\"]\n",
+    "# save neighborhoods to a file\n",
+    "f = open(\"../data/neighborhood/neighborhoods_v2_2500_5000.txt\", 'a')\n",
+    "count = 0\n",
+    "for business_id in restaurant_data.keys()[2500:]:\n",
+    "    business_data = restaurant_data[business_id][\"business_data\"]\n",
     "    \n",
-    "#     if \"latitude\" in business_data.keys() and \"longitude\" in business_data.keys():\n",
-    "#         latitude = business_data[\"latitude\"]\n",
-    "#         longitude = business_data[\"longitude\"]\n",
+    "    if \"latitude\" in business_data.keys() and \"longitude\" in business_data.keys():\n",
+    "        latitude = business_data[\"latitude\"]\n",
+    "        longitude = business_data[\"longitude\"]\n",
     "\n",
-    "#         url = MAPS_LAT_LONG_URL.replace(\"{lat}\", str(latitude))\n",
-    "#         url = url.replace(\"{long}\", str(longitude))\n",
-    "#         url = url.replace(\"{api_key}\", API_KEY)\n",
+    "        url = MAPS_LAT_LONG_URL.replace(\"{lat}\", str(latitude))\n",
+    "        url = url.replace(\"{long}\", str(longitude))\n",
+    "        url = url.replace(\"{api_key}\", API_KEY)\n",
     "\n",
-    "#         neighborhood = send_map_request(business_id, url)\n",
-    "#         if neighborhood != None:\n",
-    "#             f.write(business_id + \": \" + neighborhood + \"\\n\")\n",
-    "#         else:\n",
-    "#             f.write(business_id + \": N/A\\n\")\n",
+    "        neighborhood = send_map_request(business_id, url)\n",
+    "        if neighborhood != None:\n",
+    "            f.write(business_id + \": \" + neighborhood + \"\\n\")\n",
+    "        else:\n",
+    "            f.write(business_id + \": N/A\\n\")\n",
     "            \n",
-    "#     # log\n",
-    "#     count += 1\n",
-    "#     sys.stdout.write(\"\\rCompleted first %d businesses\" % count)\n",
-    "# f.close()"
+    "    # log\n",
+    "    count += 1\n",
+    "    sys.stdout.write(\"\\rCompleted first %d businesses\" % count)\n",
+    "f.close()"
    ]
   },
   {
