Reading in legit neighborhood data in python notebook

--- a/notebooks/restaurant_data.ipynb
+++ b/notebooks/restaurant_data.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 296,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -24,6 +24,7 @@
     "MOBILE_FOOD_SCHEDULE = \"../data/mobile_food_schedule/\"\n",
     "RESTAURANT_SCORES    = \"../data/restaurant_scores/SFFoodProgram_Complete_Data/\"\n",
     "OUTPUT_PATH          = \"../data/json/\"\n",
+    "NEIGHBORHOOD_PATH    = \"../data/neighborhood/\"\n",
     "\n",
     "mobile_food_data_df = pd.read_csv(MOBILE_FOOD_SCHEDULE + \"Mobile_Food_Schedule.csv\")\n",
     "businesses_plus_df  = pd.read_csv(RESTAURANT_SCORES + \"businesses_plus.csv\", encoding='latin-1')\n",
@@ -100,6 +101,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Dummy neighborhood data for testing"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 299,
    "metadata": {
@@ -132,6 +140,60 @@
     "\n",
     "for business_id in all_restaurant_data:\n",
     "    all_restaurant_data[business_id][\"business_data\"][\"neighborhood\"] = random.choice(neighborhoods)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Real neighborhood data from Google"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sunset District\n",
+      "Financial District\n",
+      "Russian Hill\n",
+      "Financial District\n",
+      "Polk Gulch\n"
+     ]
+    }
+   ],
+   "source": [
+    "# files\n",
+    "neighborhood_file_1 = NEIGHBORHOOD_PATH + \"neighborhoods_0_2500.txt\"\n",
+    "neighborhood_file_2 = NEIGHBORHOOD_PATH + \"neighborhoods_2498_4997.txt\"\n",
+    "\n",
+    "# dict\n",
+    "# @key: int - business_id \n",
+    "# @value: str - neighborhood\n",
+    "restaurants_and_neighborhoods = {}\n",
+    "\n",
+    "# add first half of data\n",
+    "for line in open(neighborhood_file_1, \"r\"):\n",
+    "    arr = map(lambda x: x.replace(\"\\n\", \"\"), line.split(\" \"))\n",
+    "    if arr[1] != \"N/A\":\n",
+    "        business_id = int(arr[0][:len(arr[0]) - 1])\n",
+    "        neighborhood = \" \".join(arr[1:]).strip()\n",
+    "        restaurants_and_neighborhoods[business_id] = neighborhood\n",
+    "        \n",
+    "# add second half of data\n",
+    "for line in open(neighborhood_file_2, \"r\"):\n",
+    "    arr = map(lambda x: x.replace(\"\\n\", \"\"), line.split(\" \"))\n",
+    "    if arr[1] != \"N/A\":\n",
+    "        business_id = int(arr[0][:len(arr[0]) - 1])\n",
+    "        neighborhood = \" \".join(arr[1:]).strip()\n",
+    "        restaurants_and_neighborhoods[business_id] = neighborhood\n",
+    "        \n"
    ]
   },
   {
