Added all real data

--- a/notebooks/restaurant_data.ipynb
+++ b/notebooks/restaurant_data.ipynb
@@ -4,12 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Data"
+    "# Data Scrubbing"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 54,
    "metadata": {
     "collapsed": false
    },
@@ -33,8 +33,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Merge Business, Inspection, and Violation Data"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 297,
+   "execution_count": 55,
    "metadata": {
     "collapsed": false
    },
@@ -81,8 +88,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Food Truck Data"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 298,
+   "execution_count": 56,
    "metadata": {
     "collapsed": false
    },
@@ -104,12 +118,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Dummy neighborhood data for testing"
+    "## Add Neighorhood Data From Google"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 299,
+   "execution_count": 57,
    "metadata": {
     "collapsed": false
    },
@@ -138,36 +152,17 @@
     "                 \"Inner Sunset\",\"Parnassus Heights\",\"Forest Knolls\",\"Buena Vista\",\"Corona Heights\",\"Ashbury Heights\",\n",
     "                 \"Eureka Valley\",\"St. Francis Wood\",\"Sherwood Forest\"]\n",
     "\n",
-    "for business_id in all_restaurant_data:\n",
-    "    all_restaurant_data[business_id][\"business_data\"][\"neighborhood\"] = random.choice(neighborhoods)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Real neighborhood data from Google"
+    "# for business_id in all_restaurant_data:\n",
+    "#     all_restaurant_data[business_id][\"business_data\"][\"neighborhood\"] = random.choice(neighborhoods)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 58,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sunset District\n",
-      "Financial District\n",
-      "Russian Hill\n",
-      "Financial District\n",
-      "Polk Gulch\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# files\n",
     "neighborhood_file_1 = NEIGHBORHOOD_PATH + \"neighborhoods_0_2500.txt\"\n",
@@ -193,12 +188,25 @@
     "        business_id = int(arr[0][:len(arr[0]) - 1])\n",
     "        neighborhood = \" \".join(arr[1:]).strip()\n",
     "        restaurants_and_neighborhoods[business_id] = neighborhood\n",
-    "        \n"
+    "        \n",
+    "# add neighborhoods to main restaurant dict\n",
+    "for business_id in all_restaurant_data:\n",
+    "    val = None\n",
+    "    if business_id in restaurants_and_neighborhoods:\n",
+    "        val = restaurants_and_neighborhoods[business_id]\n",
+    "    all_restaurant_data[business_id][\"business_data\"][\"neighborhood\"] = val"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Filter Restaurants With Missing Data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 300,
+   "execution_count": 59,
    "metadata": {
     "collapsed": false
    },
@@ -207,29 +215,42 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Data PRE-filter length:  7622\n",
-      "Data POST-filter length:  4669\n"
+      "Data PRE-filter for lat/long length:  7622\n",
+      "Data POST-filter for lat/long length:  4669 \n",
+      "\n",
+      "Data PRE-filter for neighborhood:  4669\n",
+      "Data POST-filter for neighborhood:  3006\n"
      ]
     }
    ],
    "source": [
-    "# remove business that are missing longitude or latitude data\n",
-    "print \"Data PRE-filter length: \", len(all_restaurant_data.keys())\n",
+    "# remove businesses that are missing longitude or latitude data\n",
+    "print \"Data PRE-filter for lat/long length: \", len(all_restaurant_data.keys())\n",
     "all_restaurant_data = {k:v for k,v in all_restaurant_data.iteritems() if (\"latitude\" in v[\"business_data\"]) and (v[\"business_data\"][\"latitude\"]) and (\"longitude\" in v[\"business_data\"]) and (v[\"business_data\"][\"longitude\"])}\n",
-    "print \"Data POST-filter length: \", len(all_restaurant_data.keys())"
+    "print \"Data POST-filter for lat/long length: \", len(all_restaurant_data.keys()), \"\\n\"\n",
+    "\n",
+    "# remove businesses that are missing neighborhood data\n",
+    "print \"Data PRE-filter for neighborhood: \", len(all_restaurant_data.keys())\n",
+    "all_restaurant_data = {k:v for k,v in all_restaurant_data.iteritems() if v[\"business_data\"][\"neighborhood\"] != None}\n",
+    "print \"Data POST-filter for neighborhood: \", len(all_restaurant_data.keys())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Write to External Files"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 301,
+   "execution_count": 60,
    "metadata": {
     "collapsed": false,
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "# write data to files in JSON format\n",
-    "\n",
     "# mobile food data\n",
     "with open(OUTPUT_PATH + \"mobile_food_data.json\", \"w\") as outfile:\n",
     "    json.dump(mobile_food_data, outfile)\n",
@@ -245,12 +266,12 @@
     "collapsed": true
    },
    "source": [
-    "# Neighborhood Data"
+    "## Calculate Neighborhood Info for Chloropleth"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 302,
+   "execution_count": 61,
    "metadata": {
     "collapsed": false
    },
@@ -269,7 +290,7 @@
     "                inspection_data.sort(key=lambda x: x[\"Score\"])\n",
     "                total_score += inspection_data[0][\"Score\"]\n",
     "                num_scores_added += 1\n",
-    "    return total_score / num_scores_added\n",
+    "    return total_score / num_scores_added if num_scores_added != 0 else 0\n",
     "    \n",
     "# takes a neighborhood and returns average number of violations per\n",
     "# restaurant in that neighborhood\n",
@@ -281,12 +302,12 @@
     "            violation_data = all_restaurant_data[business_id][\"violation_data\"]\n",
     "            total_score += len(violation_data)\n",
     "            num_scores_added += 1\n",
-    "    return total_score / num_scores_added"
+    "    return total_score / num_scores_added if num_scores_added != 0 else 0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 303,
+   "execution_count": 62,
    "metadata": {
     "collapsed": false
    },
@@ -301,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 304,
+   "execution_count": 63,
    "metadata": {
     "collapsed": false
    },
@@ -311,15 +332,6 @@
     "with open(OUTPUT_PATH + \"chloropleth_data.json\", \"w\") as outfile:\n",
     "    json.dump(chloropleth_data, outfile)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
